--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "parcel": "^2.8.3"
   },
   "dependencies": {
-    "@vimeo/player": "^2.18.0",
-    "lodash": "^4.17.21",
-    "lodash.throttle": "^4.1.1",
-    "simplelightbox": "^2.13.0"
+    "flatpickr": "^4.6.13"
   }
 }
