--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "parcel": "^2.8.3"
   },
   "dependencies": {
-    "flatpickr": "^4.6.13"
+    "flatpickr": "^4.6.13",
+    "notiflix": "^3.2.6"
   }
 }
