--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "flatpickr": "^4.6.13",
     "notiflix": "^3.2.6"
+  },
+  "bugs": {
+    "url": "https://github.com/szymonoponczewski/goit-js-hw-09/issues"
   }
 }
